@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam dpi 150
left to right direction

package "models" {
class Department {
  +id : int
  +name : str
  +type : str
}
class Incident {
  +id : int
  +date : date
  +department_id : int <<FK>>
  +incident_type : str
  +severity : str
  +days_lost : int
  +description : str
}
class EquipmentFailure {
  +id : int
  +date : date
  +department_id : int <<FK>>
  +equipment_type : str
  +equipment_name : str
  +operating_hours : float
  +downtime_hours : float
  +failure_cause : str
  +repair_cost : float
  +description : str
}
class SafetyViolation {
  +id : int
  +date : date
  +department_id : int <<FK>>
  +violation_type : str
  +is_audit_finding : bool
  +responsible : str
  +description : str
}
class MedicalExam {
  +id : int
  +date : date
  +profession : str
  +department_id : int <<FK>>
  +findings : str
  +disease_category : str
  +notes : str
}
class RiskAssessment {
  +id : int
  +method : str
  +name : str
  +input_params : JSON
  +result : JSON
  +source_type : str
  +source_id : int
  +created_at : datetime
  +author : str
}
}

package "schemas" {
class IncidentBase {
  +date : date
  +department_id : int
  +incident_type : str
  +severity : str
  +days_lost : int
}
class EquipmentFailureBase {
  +date : date
  +department_id : int
  +equipment_type : str
  +equipment_name : str
  +downtime_hours : float
}
class SafetyViolationBase {
  +date : date
  +department_id : int
  +violation_type : str
  +is_audit_finding : bool
}
}

package "statistics" {
class DescriptiveStats {
  +count : int
  +mean : float
  +std : float
  +min : float
  +q1 : float
  +median : float
  +q3 : float
  +max : float
}
class TrendResult {
  +trend_direction : str
  +slope : float
  +r_squared : float
  +p_value : float
  +moving_avg : List
  +forecast : List
}
class PoissonResult {
  +lambda_est : float
  +probabilities : List
  +confidence_interval : Tuple
}
class CorrelationResult {
  +pearson_r : float
  +spearman_r : float
  +p_value : float
  +conclusion : str
}
}

package "risk" {
class FMEAResult {
  +failure_mode : str
  +severity : int
  +occurrence : int
  +detection : int
  +rpn : int
  +rpn_ci : Tuple
}
class FMEAAnalysis {
  +name : str
  +items : List
  +avg_rpn : float
  +recommendations : List
}
}

Department "1" --> "*" Incident : "имеет"
Department "1" --> "*" EquipmentFailure : "эксплуатирует"
Department "1" --> "*" SafetyViolation : "допускает"
Department "1" --> "*" MedicalExam : "организует"

Incident ..> IncidentBase : "соответствует"
EquipmentFailure ..> EquipmentFailureBase : "соответствует"
SafetyViolation ..> SafetyViolationBase : "соответствует"

FMEAAnalysis --> "*" FMEAResult : "содержит"
@enduml
